@@ -103,7 +103,7 @@
                             -server -Xms1536m -Xmx1536m
                             -XX:NewSize=256m -XX:MaxNewSize=256m
                             -XX:PermSize=256m
-                            -XX:MaxPermSize=512m -XX:+DisableExplicitGC
+                            -XX:+DisableExplicitGC
                             -XX:+UseConcMarkSweepGC
                             -XX:+CMSIncrementalMode
                             -XX:+CMSIncrementalPacing
